Fixed background image resizing on scroll on mobile
- Added a media query where I set background-size to a static size.

--- a/frontend/src/scss/pages/_home.scss
+++ b/frontend/src/scss/pages/_home.scss
@@ -41,6 +41,14 @@
     grid-area: space;
   }
 
+  @media screen and (max-width: 1024px) {
+
+    .home--container {
+     background-size: 1500px;
+    }
+
+  }
+
   @media screen and (max-width: 450px) {
      
     .home--container {
